--- a/front-vue/package.json
+++ b/front-vue/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "sweetalert2": "^11.11.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vue-sweetalert2": "^5.0.9"
+    "vue-sweetalert2": "@latest"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
